--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+html {
+    min-height: 100%;
+}
 body {
     background-color: rgba(0, 0, 0, 90%);
 }
@@ -69,4 +72,14 @@ button {
 }
 #equals {
     flex-grow: 7;
+}
+
+@media (max-width: 425px) {
+    .buttons :hover {
+        border: none;
+    }
+    .buttons :active {
+        background-color: transparent;
+        transform: scale(1.1)
+    }   
 }
